--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@ layout: page
 
 <!--section start-->
 <div class="section">
-    <p>I'm an undergraduate student currently studying in Shanghai Jiao Tong University (SJTU) majoring in computer science and will achieve my Bachelor degree in Jun. 2019. Since Sept. 2015, I've been a member of <span class="spec"> Zhiyuan Honor Program of Engineering</span> which belongs to Zhiyuan College (independent research-oriented colloge in SJTU). You can find me at
-    <a href="http://zhiyuan.sjtu.edu.cn/student/2015/%E5%B7%A5%E7%A7%91%E6%96%B9%E5%90%91#%E5%BC%A0%E9%80%B8%E6%81%92">here</a>
+    <p>My name is Liyao(李姚). I'm a graduate student currently studying in Shanghai Jiao Tong University (SJTU) 
+        majoring in computer science and will achieve my Master degree in Mar. 2020.
     </p>
     <br/>
-    <p>My research interests basically lie in Computer Graphics and Vision. Most of my work is related to global illumination while a bunch of other topics remain attractive to me, including geometric modeling, texture simulation, scene reconstruction, 3-D vision and animation.
+    <p>I am very interested in computer vision, especially segmentation. 
+        In order to study related topics, I joined Lab of Digital Media and Data Reconstruction in Mar. 2017 as a graduate student. 
+        Up to now, I've participated in several computer vision projects. 
+        I am familiar with popular neural networks, MXNet framework and reading \& reproducing papers. 
+        I am keen to participate in any related topics/projects to cultivate my professional skills.
     </p>
     <br/>
-    <p>From July 2018, I will go to Shenzhen to work as a research intern in <span class="spec">Tencent Company</span> under the supervison of <span class="spec">Prof. Jiaya Jia</span> 
+    <p> 
     </p>
     <br/>
 </div>            
