--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@ layout: page
 <div class="section">
     <p>My name is Liyao(李姚). I'm a graduate student currently studying in Shanghai Jiao Tong University (SJTU) 
         majoring in computer science and will achieve my Master degree in Mar. 2020.
-    </p>
-    <br/>
+
     <p>I am very interested in computer vision, especially segmentation. 
         In order to study related topics, I joined Lab of Digital Media and Data Reconstruction in Mar. 2017 as a graduate student. 
         Up to now, I've participated in several computer vision projects. 
-        I am familiar with popular neural networks, MXNet framework and reading \& reproducing papers. 
+        I am familiar with popular neural networks, MXNet framework and reading & reproducing papers. 
         I am keen to participate in any related topics/projects to cultivate my professional skills.
     </p>
     <br/>
-    <p> 
+    <p>=============================================================================================================================
     </p>
     <br/>
 </div>            
