--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layout: page
     <div class="headerwrapper">
         <h1>Liyao (李姚)</h1>
         <div class="clearfix"></div>
-        <h2>Shanghai Jiao Tong University - Computer Science and Engineering</h2>
+        <h2>Shanghai Jiao Tong University</h2>
+        <h2>Computer Science and Engineering</h2>
     </div>
 </header>
 <!--header end-->
@@ -25,7 +26,7 @@ layout: page
         I am keen to participate in any related topics/projects to cultivate my professional skills.
     </p>
     <br/>
-    <p>============================================================================
+    <p>===============================================================================
     </p>
     <br/>
 </div>            
