--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: page
         <h1>Liyao (李姚)</h1>
         <div class="clearfix"></div>
         <h2>Shanghai Jiao Tong University</h2>
-        <h2>Computer Science and Engineering</h2>
+        <!--<h2>Computer Science and Engineering</h2>-->
     </div>
 </header>
 <!--header end-->
