--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>雄关漫道真如铁<br>
     而今迈步从头越</p></blockquote>
 
-    <p>我是<strong>李姚(Liyao)</strong>. 现在是上海交通大学计算机系的一名硕士研究生.</p>
+    <p>我是<strong>李姚(Liyao)</strong>. 现在是上海交通大学计算机系的一名Ph.D. student.</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 搭建的个人主页.</p>
+    <!-- <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 搭建的个人主页.</p> -->
     
-    <p>我学习的方向是计算机视觉, 尤其对于Segmentation方向很是感兴趣.</p>
+    <!-- <p>我学习的方向是计算机视觉, 尤其对于Segmentation方向很是感兴趣.</p> -->
     
     <p>这是我的GitHub页面: <a href="https://github.com/liyaoplus">liyaoplus</a>. 如有问题, 还请不吝赐教.</p>
 
