--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: page
 
 <!--section start-->
 <div class="section">
+    <!--
     <p>My name is Liyao(李姚). I'm a graduate student currently studying in Shanghai Jiao Tong University (SJTU) 
         majoring in computer science and will achieve my Master degree in Mar. 2020.
 
@@ -24,6 +25,12 @@ layout: page
         Up to now, I've participated in several computer vision projects. 
         I am familiar with popular neural networks, MXNet framework and reading & reproducing papers. 
         I am keen to participate in any related topics/projects to cultivate my professional skills.
+    -->
+
+    <p>My name is Liyao(李姚). I'm a Ph.D. student currently studying in Shanghai Jiao Tong University (SJTU).
+
+    <p>I joined APEX DATA & KNOWLEDGE MANAGEMENT LAB in Sept. 2020. New start, new challenge.
+
     </p>
     <br/>
     <hr>
