--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ layout: page
 
     <p>My name is Liyao(李姚). I'm a Ph.D. student currently studying in Shanghai Jiao Tong University (SJTU).
 
-    <p>I joined APEX DATA & KNOWLEDGE MANAGEMENT LAB in Sept. 2020. New start, new challenge.
+    <p>I joined APEX Lab in Sept. 2020. New start, new challenge. Hope everything goes well!
 
     </p>
     <br/>
