--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ layout: page
     <div class="headerwrapper">
         <h1>Liyao (李姚)</h1>
         <div class="clearfix"></div>
-        <h2>Shanghai Jiao Tong University</h2>
-        <!--<h2>Computer Science and Engineering</h2>-->
+        <!-- <h2>Shanghai Jiao Tong University</h2> -->
+        <!-- <h2>Computer Science and Engineering</h2> -->
     </div>
 </header>
 <!--header end-->
